# app-proxy-switcher-win

./: .gitignore  AGENTS.md  CMakeLists.txt  README.en.md  README.md  build.bat
docs/: SECURITY_NOTES.md
scripts/: Fetch-WebView2.ps1  Start-Codex-Native.ps1  Start-Codex-VPN.ps1
src/: app.manifest  app_config.hpp  app_finder.cpp  app_finder.hpp  app_select_dialog.cpp  app_select_dialog.hpp  app_window.cpp  app_window.hpp  config_store.cpp  config_store.hpp  dpi_utils.cpp  dpi_utils.hpp  known_agents.cpp  known_agents.hpp  launcher.cpp  launcher.hpp  main.cpp  proxy_detector.cpp  proxy_detector.hpp  proxy_dialog.cpp  proxy_dialog.hpp  proxy_mode.hpp  resource.h  resource.rc  system_proxy.cpp  system_proxy.hpp  utils.cpp  utils.hpp  webview_main.cpp  webview_ui.hpp  webview_window.cpp  webview_window.hpp
tests/: app_finder_tests.cpp
